--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,5 +13,52 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Public Sans", sans-serif;
+  font-size: $font-med;
+  font-weight: 300;
+  color: $grayisBlue;
   line-height: 1.3;
+}
+
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
+}
+
+// Flexbox
+.flex {
+  display: flex;
+  &-jc-sb {
+    justify-content: space-between;
+  }
+  &-jc-c {
+    justify-content: center;
+  }
+  &-ai-c {
+    align-items: center;
+  }
+}
+
+// Buttons
+.button {
+  padding: 0.875rem 2.1875rem;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 400;
+}
+
+// visibility
+.hide-for-mobile {
+  //hide for tablet and mobile
+  @include breakpoint-down(medium) {
+    display: none;
+  }
+}
+.hide-for-desktop {
+  //hide for desktop viewport widths
+  @include breakpoint-up(large) {
+    display: none;
+  }
 }
