--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,34 @@
 .header {
+  // Hamburger open styles
+  &.open {
+    .header__toggle {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: 3.75rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background: linear-gradient($darkBlue, transparent);
+  }
+
   nav {
-    padding: 1.0625rem 1.5rem;
+    position: relative;
+    background-color: $white;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
   &__logo {
@@ -10,17 +38,36 @@
     }
   }
 
-  &__menu {
-    // mobile menu
+  &__toggle {
+    // mobile menu toggle
     > span {
       display: block;
       width: 26px;
-      height: 2px;
+      height: 0.125rem;
       background-color: $darkBlue;
-
+      transform-origin: 3px 1px;
+      transition: all 200ms ease-in-out;
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
       }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $white;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
+
+    a {
+      display: block;
+      padding: 0.625rem;
+      color: $darkBlue;
+      text-align: center;
     }
   }
 
@@ -62,6 +109,7 @@
     font-size: $font-sm;
     color: $white;
     transition: opacity 300ms ease-in-out;
+    //animation: fade-in 300ms ease-in-out forwards;
 
     &:hover {
       opacity: 0.75;
