--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -2,8 +2,8 @@
 $darkBlue: hsl(233, 26%, 24%);
 $limeGreen: hsl(136, 65%, 51%);
 $brightCyan: hsl(192, 70%, 51%);
-$grayisBlue: hsl(233, 8%, 62%);
-$lightGrayisblue: hsl(220, 16%, 96%);
+$grayishBlue: hsl(233, 8%, 62%);
+$lightGrayishblue: hsl(220, 16%, 96%);
 $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
