--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -29,19 +29,19 @@
     }
   }
 
-  &__img {
+  &__image {
     height: 12.5rem;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
   }
 
   &__text {
     padding: 1.875rem 1.875rem 2.5rem 1.875rem;
-    color: $grayisBlue;
+    color: $grayishBlue;
 
     @include breakpoint-up(medium) {
-      padding: 1.875rem 1.562rem;
+      padding: 1.875rem 1.5625rem;
     }
   }
 
