--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -1,5 +1,5 @@
 .feature {
-  background-color: $lightGrayisblue;
+  background-color: $lightGrayishblue;
   text-align: center;
 
   @include breakpoint-up(medium) {
@@ -8,8 +8,9 @@
 
   &__intro {
     margin-bottom: 3.75rem;
+
     @include breakpoint-up(large) {
-      max-width: 60%;
+      width: 60%;
     }
   }
 
@@ -19,6 +20,7 @@
       flex-wrap: wrap;
     }
   }
+
   &__item {
     padding: 0.9375rem;
 
@@ -38,6 +40,7 @@
       margin-bottom: 2.75rem;
     }
   }
+
   &__title {
     font-size: 1.25rem;
     font-weight: 300;
@@ -50,8 +53,9 @@
       margin-bottom: 1.5rem;
     }
   }
+
   &__description {
     font-size: 0.875rem;
-    line-height: 1.5rem;
+    line-height: 1.5;
   }
 }
