--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: $darkBlue;
   color: $white;
-  padding: 2.5rem; //40px
+  padding: 2.5rem;
   text-align: center;
 
   .container {
@@ -9,7 +9,9 @@
       display: grid;
       grid-template-columns: 2fr 1fr 1fr 3fr;
       grid-template-rows: 1fr auto;
-      grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyrights";
+      grid-template-areas:
+        "logo links1 links2 cta"
+        "social links1 links2 copyright";
       gap: 1rem;
       justify-items: start;
     }
@@ -63,7 +65,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 0.9375rem; //15px
+    font-size: 0.9375rem;
 
     @include breakpoint-up(large) {
       justify-content: space-between;
@@ -75,6 +77,7 @@
         grid-area: links1;
       }
     }
+
     &.col2 {
       @include breakpoint-down(medium) {
         margin-bottom: 1.875rem;
@@ -84,12 +87,14 @@
         grid-area: links2;
       }
     }
+
     a {
-      line-height: 2.25rem;
+      line-height: 2.25;
       transition: color 150ms ease-in-out;
-    }
-    a:hover {
-      color: $limeGreen;
+
+      &:hover {
+        color: $limeGreen;
+      }
     }
   }
 
@@ -99,6 +104,7 @@
       text-align: right;
       justify-self: end;
     }
+
     a.button {
       @include breakpoint-down(medium) {
         margin-bottom: 1.875rem;
@@ -106,11 +112,12 @@
     }
   }
 
-  &__copyrights {
-    font-size: 0.8125rem; //13px
-    color: $grayisBlue;
+  &__copyright {
+    font-size: 0.8125rem;
+    color: $grayishBlue;
+
     @include breakpoint-up(large) {
-      grid-area: copyrights;
+      grid-area: copyright;
       align-self: end;
       justify-self: end;
     }
