--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,22 +13,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Public Sans", sans-serif;
-  font-size: $font-med;
+  font-size: $font-sm;
   font-weight: 300;
-  color: $grayisBlue;
+  color: $grayishBlue;
   line-height: 1.3;
-  min-height: 300vh;
+  min-height: 350vh;
   overflow-x: hidden;
 
   @include breakpoint-up(large) {
     font-size: $font-med;
   }
 
-  &.noScroll {
+  &.noscroll {
     overflow: hidden;
   }
 }
 
+// Text
 h1,
 h2,
 h3 {
@@ -58,7 +59,7 @@ h2 {
 }
 
 p {
-  line-height: 1.5rem;
+  line-height: 1.5;
   margin-bottom: 2.25rem;
 }
 
@@ -72,11 +73,12 @@ a:hover {
 .container {
   max-width: 69.375rem;
   margin: 0 auto;
+
   &--pall {
     padding-top: 4.375rem;
-    padding-left: 1.5rem;
-    padding-bottom: 4.375rem;
     padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
+    padding-left: 1.5rem;
 
     @include breakpoint-up(large) {
       padding-top: 6rem;
@@ -93,8 +95,8 @@ a:hover {
     }
   }
   &--px {
-    padding-left: 1.5rem;
     padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
   &--pt {
     padding-top: 4.375rem;
@@ -108,6 +110,7 @@ a:hover {
   }
   &--pb {
     padding-bottom: 4.375rem;
+
     @include breakpoint-up(large) {
       padding-bottom: 6rem;
     }
@@ -120,19 +123,22 @@ a:hover {
 // Flexbox
 .flex {
   display: flex;
+
   &-jc-sb {
     justify-content: space-between;
   }
+
   &-jc-c {
     justify-content: center;
   }
+
   &-ai-c {
     align-items: center;
   }
 }
 
 // Buttons
-.button,
+button,
 .button {
   position: relative;
   display: inline-block;
@@ -141,6 +147,7 @@ a:hover {
   border: 0;
   border-radius: 50px;
   cursor: pointer;
+  color: $white;
   font-weight: 400;
   font-size: $font-sm;
   transition: opacity 300ms ease-in-out;
@@ -163,17 +170,15 @@ a:hover {
   }
 }
 
-// visibility
+// Visibility
 .hide-for-mobile {
-  //hide for tablet and mobile
   @include breakpoint-down(medium) {
     display: none;
   }
 }
+
 .hide-for-desktop {
-  //hide for desktop viewport widths
   @include breakpoint-up(large) {
-    //display: block;
     display: none;
   }
 }
